Actualiza la configuración y carga de variables de entorno

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # MongoDB
-MONGO_URI=mongodb://root:example@mongodb:27017/
+MONGO_URI=mongodb://root:uest_pass@mongodb:27017/
 MONGO_DB=excel_storage
+MONGO_INITDB_ROOT_PASSWORD=uest_pass
 
 # App settings
 APP_PORT=8000
