--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
+version: "3.8"
 services:
   mongodb:
     image: mongo:latest
     container_name: mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD} # Usar la variable del archivo .env
     ports:
       - "27017:27017"
     volumes:
@@ -13,11 +14,8 @@ services:
   excel-service:
     build: .
     container_name: excel_service
-    environment:
-      MONGO_URI: mongodb://root:example@mongodb:27017/
-      MONGO_DB: excel_storage
-      APP_PORT: 8000
-      APP_ENV: development
+    env_file:
+      - .env # Cargar variables de entorno desde el archivo .env
     ports:
       - "8000:8000"
     depends_on:
