Permite subir un archivo

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# .env
 # MongoDB
 MONGO_URI=mongodb://root:uest_pass@mongodb:27017/
 MONGO_DB=excel_storage
@@ -6,3 +7,6 @@ MONGO_INITDB_ROOT_PASSWORD=uest_pass
 # App settings
 APP_PORT=8000
 APP_ENV=development
+
+SECRET_KEY = os.getenv("SECRET_KEY", "default_secret_key")  # Usar variable de entorno para mayor seguridad
+
