--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   mongodb:
     image: mongo:latest
@@ -10,6 +9,11 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    healthcheck:
+      test: ["CMD", "mongo", "--eval", "db.admin().ping()"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   excel-service:
     build: .
@@ -19,7 +23,7 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - mongodb
+      - mongodb # Eliminada la condición
 
 volumes:
   mongo_data:
